[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Enemies/dasherEnemy.gd" type="Script" id=2]

[node name="dasherEnemy" instance=ExtResource( 1 )]
script = ExtResource( 2 )
health = 2
motions = [ Vector2( -280, 0 ), Vector2( 120, 0 ), Vector2( -445, 0 ) ]

[node name="Tween" type="Tween" parent="." index="3"]

[node name="returnTimer" type="Timer" parent="." index="4"]
wait_time = 0.6
one_shot = true
autostart = true

[node name="dashTimer" type="Timer" parent="." index="5"]
wait_time = 0.6
one_shot = true
autostart = true

[connection signal="timeout" from="returnTimer" to="." method="returnMotion"]
[connection signal="timeout" from="dashTimer" to="." method="dashMotion"]
